fix spacing and padding on avatar

--- a/source/assets/stylesheets/components/_avatar.scss
+++ b/source/assets/stylesheets/components/_avatar.scss
@@ -1,4 +1,4 @@
-.card-avatar {
+.avatar {
   height: 200px;
   display: flex;
   padding: 0px 8px;
@@ -11,7 +11,7 @@
   }
 }
 
-.card-avatar-infos {
+.avatar-infos {
   display: flex;
   flex-direction: column;
   padding-left: 8px;
@@ -23,5 +23,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+  }
+  .title {
+    padding-top: 25px;
+  }
+  .description {
+    padding-bottom: 25px;
   }
 }
